--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -72,6 +72,7 @@ header ul li.brand {
   justify-content: center;
   gap: 30px;
   margin: 20px 0;
+
 }
 
 .tab-label {
@@ -103,6 +104,7 @@ header ul li.brand {
   border-radius: 8px;
   transition: all 0.3s ease;
   cursor: pointer;
+  color: #ffffff;
 }
 .nav_btn:hover {
   transform: translateY(2px);
