--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -24,6 +24,7 @@ h2 {
 ul, ol, li {
   list-style: none;
 }
+
 a {
   text-decoration: none;
   color: #ffffff; 
@@ -48,6 +49,13 @@ a {
   margin: 0 auto;
 }
 
+.input-wrapper {
+  display: flex;
+  justify-content: center; /* 入力欄を中央に配置 */
+  width: 100%;
+}
+
+
 /* ========== ヘッダー ========== */
 header {
   margin: 0 auto;
@@ -67,8 +75,10 @@ header ul {
 
 header ul li.brand {
   font-size: 4em !important;
-  font-weight: bold;
+  font-weight: 900;
+  font-family: "Gravitas One", serif;
 }
+
 
 /* ========== タブ ========== */
 .tab-nav {
@@ -99,9 +109,9 @@ header ul li.brand {
 
 /* ========== ナビゲーションボタン ========== */
 .nav_btn {
+  display: inline-block;
   width: 150px;
   text-align: center;
-  display: inline-block;
   margin: 0 7px;
   padding: 10px 20px;
   background-color: #1e90ff;
@@ -109,11 +119,14 @@ header ul li.brand {
   transition: all 0.3s ease;
   cursor: pointer;
   color: #ffffff;
+  font-size: 1em;
+  border: none;
+  text-decoration: none; /* ← aタグの下線を消す */
 }
+
 .nav_btn:hover {
   transform: translateY(2px);
   background-color: #0000cd;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
   opacity: 0.85;
 }
 
@@ -152,20 +165,21 @@ main ul li {
 }
 
 .btn {
-  width: 70px;
+  width: 80px;
   text-align: center;
-  display: inline-block;
   margin: 0 7px;
   padding: 10px 20px;
   background-color: #1e90ff;
   border-radius: 8px;
   transition: all 0.3s ease;
   cursor: pointer;
+  color: #ffffff;
+  border: none;
+  font-size: 16px;
 }
 .btn:hover {
   transform: translateY(2px);
   background-color: #0000cd;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
   opacity: 0.85;
 }
 
@@ -188,15 +202,19 @@ h2 {
 
 /* 枠線  */
 .work-link {
-  display: block;
-  padding: 5px;
+  display: flex;
+  flex-direction: column;
+
+  padding: 15px;
   margin: 15px auto;
   width: 90%;
   border: 1px solid #fff;
 }
+
 .work-link .label {
 	color: #FFFF00;
-	font-size: 2em;
+	font-size: 2.5em;
+
 }
 
 .info-row {
@@ -204,7 +222,7 @@ h2 {
   gap: 20px; /* ラベルとジャンルの間隔 */
   align-items: center;
   margin-bottom: 8px;
-}
+} 
 
 /* ======作品詳細 ====== */
 .updated-date {
@@ -214,8 +232,21 @@ h2 {
   color: #fff;
 }
 
+/* ======作品フォーム ====== */
+.input-large {
+  width: 90%;
+  height: 25px;
+  font-size: 15px;
+  padding: 0.5em;
+}
 
-
+.textarea-large {
+  width: 90%;
+  height: 100px;
+  font-size: 15px;
+  padding: 0.5em;
+  
+}
 
 /* ========== メディアクエリ ========== */
-@media (min-width: 768px) {
+@media (min-width: 480px) {
