--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -84,13 +84,13 @@ header ul li.brand {
 .tab-nav {
   display: flex;
   justify-content: center;
-  gap: 30px;
-  margin: 20px 0;
+  gap: 70px;
+  margin: 0 0 30px;
 
 }
 
 .tab-label {
-  font-size: 1.1em;
+  font-size: 1.2em;
   color: #aaa;
   padding-bottom: 5px;
   border-bottom: 2px solid transparent;
@@ -105,6 +105,7 @@ header ul li.brand {
 /* ========== アイコン ========== */
 .icon-large {
   font-size: 2.5em; 
+  color: #1e90ff;
 }
 
 /* ========== ナビゲーションボタン ========== */
@@ -135,7 +136,7 @@ main ul {
   display: flex;
   flex-direction: column;    
   align-items: center;   
-  gap: 20px;                
+  gap: 30px;                
   padding: 20px;
   margin: 0 auto;
   list-style: none;
@@ -166,7 +167,7 @@ main ul li {
 }
 
 .btn {
-  width: 80px;
+  width: 100px;
   text-align: center;
   margin: 0 7px;
   padding: 10px 20px;
@@ -176,7 +177,7 @@ main ul li {
   cursor: pointer;
   color: #ffffff;
   border: none;
-  font-size: 16px;
+  font-size: 18px;
   box-sizing: border-box;
 }
 .btn:hover {
@@ -197,7 +198,8 @@ h2 {
 #footer {
   margin-top: 50px;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
+  font-size: 15px;
 }
 
 /* ======作品一覧 ====== */
@@ -206,18 +208,14 @@ h2 {
 .work-link {
   display: flex;
   flex-direction: column;
-
   padding: 15px;
   margin: 15px auto;
   width: 90%;
+  max-width: 600px;   /* ← 最大幅を設定して中央に */
+  min-height: 300px;
   border: 1px solid #fff;
 }
 
-.work-link .label {
-	color: #FFFF00;
-	font-size: 2.5em;
-
-}
 
 .info-row {
   display: flex;
@@ -225,6 +223,40 @@ h2 {
   align-items: center;
   margin-bottom: 8px;
 } 
+
+.link {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin: 15px auto;
+  width: 90%;
+  max-width: 600px;   /* ← 最大幅を設定して中央に */
+  border: 1px solid #fff;
+}
+
+.link .label {
+	color: #FFFF00;
+	font-size: 2.5em;
+
+}
+
+.work {
+  margin-top: 150px;
+  margin-bottom: 150px;
+  text-align: center;
+}
+
+/* ====== ジャンル ====== */
+.genres span {
+    margin: 3px;
+    padding: 2px 8px;
+    background-color: #ffb499;
+    border-radius: 5px;
+    display: inline-block;
+	font-size: 12px;
+	color: #ff571a;
+	border: 1px solid #ff571a;
+}
 
 /* ======作品詳細 ====== */
 .updated-date {
@@ -240,6 +272,8 @@ h2 {
   height: 25px;
   font-size: 15px;
   padding: 0.5em;
+  margin: 0 auto; /* ← 中央寄せ */
+  display: block; /* ← インライン要素をブロックに */
 }
 
 .textarea-large {
@@ -247,6 +281,9 @@ h2 {
   height: 100px;
   font-size: 15px;
   padding: 0.5em;
+  margin: 0 auto; /* ← 中央寄せ */
+  display: block; /* ← インライン要素をブロックに */
+
   
 }
 
